CENTRIPETAL ORBITAL RACERS CHANGELOG
------------------------------------

Version 0.1i
--------------------------
1. Game "shell/skeleton" written
2. Loading screen completed
3. AssetManager completed
4. Fonts and other utilities completed
5. Main Menu Started
6. UI System completed
7. UI elements modified with scaling support and
text support
8. Fixed UI element incorrect positions b/c of
scaling
9. Main Menu almost compelete
(Buttons done except button pressing and first
button staying selected after mouse leaving button)
10. Main Menu is complete (bug mentioned previously is
fixed