@@ -1,11 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<map version="1.0" orientation="orthogonal" renderorder="right-down" width="200" height="150" tilewidth="320" tileheight="320" nextobjectid="1">
- <tileset firstgid="1" name="track_tiles" tilewidth="320" tileheight="320" tilecount="8">
-  <image source="track_tiles.png" width="1344" height="768"/>
- </tileset>
- <layer name="Tile Layer 1" width="200" height="150">
-  <data encoding="base64" compression="zlib">
-   eJzt2csKgCAQBVArevz/F5eQUNC4aWHYOTAguHFzGUdTAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAoHfzUVOl1nZHg+bGl/vQM/mAmHxAbEn1mUM+4K5kIs/uW8uDwAeVfOTe4v0K7vQPiOkfELvO5E/zu39D/izKxHBWXud71w4J1ADF
-  </data>
- </layer>
-</map>
