@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<map version="1.0" orientation="orthogonal" renderorder="right-down" width="15" height="15" tilewidth="160" tileheight="160" nextobjectid="1">
+ <tileset firstgid="1" name="track_tiles2" tilewidth="160" tileheight="160" tilecount="108">
+  <image source="track_tiles2.png" width="2048" height="1536"/>
+ </tileset>
+ <layer name="Tile Layer 1" width="15" height="15">
+  <data encoding="base64" compression="zlib">
+   eJxjYWBgYCYDswMxIwN5gHFU76jeYaaXjYH4vMMExSA2KxADAOGoAH0=
+  </data>
+ </layer>
+</map>
