@@ -17,4 +17,6 @@ scaling
 (Buttons done except button pressing and first
 button staying selected after mouse leaving button)
 10. Main Menu is complete (bug mentioned previously is
-fixed
+fixed)
+11. Track1 screen has a background, a track, and a player car
+(not properly positioned yet)
